--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,9 @@ dependencies {
     implementation 'com.parse:parse-android:1.16.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
+    compile 'com.google.android.gms:play-services-location:11.0.4'
+    compile 'com.google.android.gms:play-services-places:11.0.4'
 }
+
+
