--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.flow.flowlocationassignment">
 
 
@@ -14,14 +15,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        tools:replace="android:allowBackup,icon,theme,label"
         android:theme="@style/AppTheme">
+
         <activity android:name="activities.TrackingLocationActivity">
 
         </activity>
-
-        <!--<meta-data-->
-            <!--android:name="com.google.android.maps.v2.API_KEY"-->
-            <!--android:value="AIzaSyApGJVAPD5z9pW60OepmbBgkV-0NPS9ewA" />-->
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -35,8 +34,18 @@
         <activity
             android:name="activities.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar"
-
             >
+
+        </activity>
+
+        <activity
+            android:name="activities.SignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+        <activity
+            android:name="activities.SplashScreenActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,9 +54,16 @@
         </activity>
 
         <activity
-            android:name="activities.SignUpActivity"
+            android:name="activities.TrackingDetailScreen"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
+
+        <activity
+        android:name="activities.TripsActivity"
+        android:theme="@style/AppTheme.NoActionBar">
+    </activity>
+
 
     </application>
 
